[gd_scene load_steps=9 format=3 uid="uid://cbb5hyaentdth"]

[ext_resource type="Script" path="res://bolt-attack.gd" id="1_tjgsb"]
[ext_resource type="Texture2D" uid="uid://bayqd171tquon" path="res://graphics/Basic Attack.png" id="2_jusid"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f0ylq"]
atlas = ExtResource("2_jusid")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ple"]
atlas = ExtResource("2_jusid")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3c81"]
atlas = ExtResource("2_jusid")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_excfd"]
atlas = ExtResource("2_jusid")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnud0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0ylq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04ple")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3c81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_excfd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_iitvd"]
radius = 16.0312

[node name="BoltAttack" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_tjgsb")
impact_damage = 5
bullet_speed = 500

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_wnud0")
autoplay = "default"
frame_progress = 0.190569

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iitvd")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
